--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -527,7 +527,7 @@ $ADMIN_MENU = [
 
 
 
-	{-Title      => 'Your Mailing List',
+	{-Title      => 'Mailing List',
 	 -Activated  => 1,
 	 -Submenu    => [
 					{
@@ -824,16 +824,6 @@ $ADMIN_MENU = [
 				], 
 		},
 				
-		{
-		-Title      => 'App Information',
-		-Activated  => 1,
-		-Submenu    => [
-
-
-
-				],
-			},
-
 ];
 
 
