--- a/dada/templates/archive_index_screen.tmpl
+++ b/dada/templates/archive_index_screen.tmpl
@@ -3,6 +3,8 @@
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name --> Archives" --> 
 <!-- tmpl_set name="load_colorbox" value="1" -->
 
+<!-- tmpl_include list_breadcrumbs_widget.tmpl -->
+
 <!-- tmpl_if list_settings.archive_search_form -->
 	<!-- tmpl_include list_archive_search_form_widget.tmpl -->
 <!-- /tmpl_if -->
