--- a/dada/templates/filtered_list_activity_widget.tmpl
+++ b/dada/templates/filtered_list_activity_widget.tmpl
@@ -26,7 +26,7 @@
 		<!-- /tmpl_if -->
 		
 		<!-- tmpl_if expr="(action eq 'unsubscribed')" --> 
-			&#8592& <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8592; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Unsubscribed</strong>
 			<!-- tmpl_else -->
