--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -142,12 +142,13 @@
  </td> 
  <td>
      <form action="<!-- tmpl_var S_PROGRAM_URL -->">
-		<input 
+		<button 
 			type="button" 
-			name="" value="[x]" 
+			name=""
 			class="button small alert tracker_delete_msg_id_data" 
 			data-mid="<!-- tmpl_var mid -->" 
-		>  		
+		>  	<i class="fi-stop"></i>
+	</button>	
 	</form> 
 </td>
 </tr> 
