--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -16,7 +16,9 @@
 	  <!-- tmpl_else --> 
   
 		 <li>
-				<input type="button" class="button small cancel_message alert" id="cancel_message_link" value="[x]" >
+				<button type="button" class="button small cancel_message alert" id="cancel_message_link">
+					<i class="fi-stop"></i>
+				</button>
 			</li>
 		  <li class="divider"></li>
 		
