--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -5,7 +5,6 @@
 				&laquo;
 			</a>
 		</li>
-
 		<!-- tmpl_if previous_page --> 
 			<li>
 				<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var previous_page -->">
@@ -37,7 +36,7 @@
 		<!-- /tmpl_if --> 
 		<li class="arrow">
 			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var last_page -->">
-				raquo;
+				&raquo;
 			</a>
 		</li>
 	</ul>
@@ -59,7 +58,7 @@
 							<a href="<!-- tmpl_var PLUGIN_URL -->?prm=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" class="modalbox">
 								<!-- tmpl_var email -->
 							</a>
-						</td
+						</td>
 						<td>
 							<!-- tmpl_var score -->
 						</td>
@@ -73,17 +72,19 @@
 		<input type="hidden" name="prm" value="cgi_erase_scorecard" > 
 		<input type="hidden" name="flavor" value="plugins" > 
 		<input type="hidden" name="plugin" value="bounce_handler" > 
-		<ul class="button-group right">
-		    <li>
-				<input 
-					type="submit" 
-					class="alert button" 
-					onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" 
-					name="process" 
-					value="Erase Score Card"
-				>
-			</li>
-		</ul>
+		<div class="clearfix">
+			<ul class="button-group right">
+			    <li>
+					<input 
+						type="submit" 
+						class="alert button" 
+						onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" 
+						name="process" 
+						value="Erase Score Card"
+					>
+				</li>
+			</ul>
+		</div>
 	</form> 
 
 <!-- tmpl_else --> 
