--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -105,13 +105,13 @@
 	<td>
 	 <input 
 	 	type="submit" 
-		class="button small" 
+		class="button small alert" 
 		value="Delete Checked" 
 	>
 	</form>
 		<form action="<!-- tmpl_var S_PROGRAM_URL -->" style="display:inline;margin:0">  
 		   <input type="hidden" name="flavor" value="purge_all_archives" >  
-		   <input type="submit" class="button small purge_archives" value="Purge All Archive Messages" >
+		   <input type="submit" class="button small purge_archives alert" value="Purge All Archive Messages" >
 	   </form> 
 	 </td>
 	</tr>
