--- a/dada/templates/bounce_search_results_modal_menu.tmpl
+++ b/dada/templates/bounce_search_results_modal_menu.tmpl
@@ -26,7 +26,7 @@
 
 <input type="submit" name="process" class="success button"  value="&#8594; Move Bouncing Address Back to Subscribers" >
 
-<button type="submit" name="process" class="warning button">Remove Bouncing Address <i class="fi-stop"></i></button>
+<button type="submit" name="process" class="warning button">Remove Bouncing Address <i class="fi-x"></i></button>
 
 </form>
 
