--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -388,11 +388,7 @@
 
 <!-- /tmpl_if --> 
 
-<div class="row">
-	<div class="small-5 small-centered columns">
-		<input type="submit" class="success exand button" value="Create Your New Mailing List">
-	</div>
-</div>
+	<input type="submit" class="success expand button" value="Create Your New Mailing List">
 
 
 </form>
