--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -58,7 +58,7 @@
 				<input type="hidden" name="prm" value="remove" >
 				<input type="hidden" name="filename" value="<!-- tmpl_var name -->" --> 
 				<button type="submit" class="alert small button">
-					<i class="fi-stop"></i>
+					<i class="fi-x"></i>
 				</button>
 			   </form> 
 			  </td> 
