--- a/dada/templates/previewBatchSendingSpeed_widget.tmpl
+++ b/dada/templates/previewBatchSendingSpeed_widget.tmpl
@@ -11,7 +11,10 @@
 	
 	<!-- tmpl_else -->
 		<li>
-			Messages will be sent at a rate of up to <strong><!-- tmpl_var per_hour --> Messages/Hour</strong>. Mailing to <strong><!-- tmpl_var num_subscribers --> subscribers</strong> will take at least <strong><!-- tmpl_var time_to_send --></strong>.
+			Messages will be sent at a rate of up to <strong><!-- tmpl_var per_hour --> Messages/Hour</strong>. 
+		</li>
+		<li>
+			Mailing to <strong><!-- tmpl_var num_subscribers --> subscribers</strong> will take at least <strong><!-- tmpl_var time_to_send --></strong>.
 		</li>
 	<!-- /tmpl_if -->
 
