--- a/dada/templates/send_email_options_widget.tmpl
+++ b/dada/templates/send_email_options_widget.tmpl
@@ -15,32 +15,32 @@
 			  	Testing
 				</a></li>
 			</ul>
-			<ul class="accordion" data-accordion>
-				<li class="accordion-navigation active">
+			
+			<dl class="accordion" data-accordion>
+				<dd class="accordion-navigation">
+					
 					<a href="#send_email_archive_options" class="show-for-small-only">Archiving</a>
 					<div id="send_email_archive_options" class="content active">
 						<div class="content-box section-box">
 						<!-- tmpl_include send_email_archive_options_widget.tmpl -->
 						</div>
 					</div>
-				</li>
-				<li class="accordion-navigation">
+
 					<a href="#partial_sending_options" class="show-for-small-only">Partial Mailing List Sending </a>
 					<div id="partial_sending_options" class="content">
 						<div class="content-box section-box">
 							<!-- tmpl_include partial_sending_options_widget.tmpl --> 
 						</div>
 					</div>
-				</li>
-				<li class="accordion-navigation">
+
 					<a href="#send_email_test_recipient" class="show-for-small-only">Testing</a>
 					<div id="send_email_test_recipient" class="content">
 						<div class="content-box section-box">
 							<!-- tmpl_include send_email_test_recipient_widget.tmpl --> 
 			    		</div>
 					</div>
-				</li>
-			</ul>
+				</dd>
+			</dl>
 		</div>
 	</div>
 </div> 
