--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -186,7 +186,7 @@
 					class="button tiny alert killMonitoredSending"
 				<!--/tmpl_unless --> 
 				title="Click to permanently STOP this mass mailing"
-			><i class="fi-stop"></i></button>
+			><i class="fi-x"></i></button>
 	    </form> 
 		<!-- /tmpl_if --> 
 		
