--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -172,7 +172,7 @@
 						href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor&id=<!-- tmpl_var message_id escape="HTML"-->&type=<!-- tmpl_var message_type escape="HTML"-->&process=kill"
 					<!--/tmpl_unless -->
 				>
-					<i class="fi-stop"></i>
+					<i class="fi-x"></i>
 					<span class="hide-for-small-only">
 						Stop
 					</span>
