--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -17,7 +17,7 @@
   
 		 <li>
 				<button type="button" class="button small cancel_message alert" id="cancel_message_link">
-					<i class="fi-stop"></i>
+					<i class="fi-x"></i>
 				</button>
 			</li>
 		  <li class="divider"></li>
