--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -185,7 +185,7 @@
                 </li>
                 <li>
                  <button type="submit" name="process" class="small button">
-            		 Remove Selected Bouncing Addresses <i class="fi-stop"></i>
+            		 Remove Selected Bouncing Addresses <i class="fi-x"></i>
 			     </button>
                 </li>
         <!-- /tmpl_if -->
