--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -31,6 +31,12 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.tablesorter.js"></script>
 <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery/jquery-ui-1.9.1.custom.min.css">
 
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.zeroclipboard.min.js"></script>
+
+
+
+
+
 <!-- tmpl_if load_google_viz --> 
 	<!-- Google Visualization -->
 	<script type="text/javascript">
