--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -117,7 +117,7 @@
 
 	<fieldset> 
 		<legend> 
-			Misc. Options
+			Miscellaneous Options
 		</legend>
 		<div class="row">
 			<div class="small-12 columns">
@@ -155,14 +155,16 @@
 			</div>
 		</div>
 	</fieldset> 
-	<ul class="button-group right">
-	    <li>
-			<input type="reset"  class="button warning" value="Clear Changes">
-		</li>
-		<li>
-			<input type="submit" class="button success" value="Save Changes">
-		</li>
-	</ul>
+	<div class="clearfix">
+		<ul class="button-group right">
+		    <li>
+				<input type="reset"  class="button warning" value="Clear Changes">
+			</li>
+			<li>
+				<input type="submit" class="button success" value="Save Changes">
+			</li>
+		</ul>
+	</div>
 </form> 
 
 <!-- end mail_sending_advanced_options_screen.tmpl -->
