Polish polish polish...

--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -1,5 +1,7 @@
 <!-- tmpl_if num_rows --> 
-	<ul class="pagination">
+	<div class="pagination-centered">
+  		<ul class="pagination">
+
 		<li class="arrow">
 			<a href="#" class="bounce_handler_turn_page" data-page="<!-- tmpl_var first_page -->">
 				&laquo;
@@ -40,6 +42,7 @@
 			</a>
 		</li>
 	</ul>
+</div>
 
 	<div> 
 		<div style="max-height: 300px; overflow: auto; border:1px solid black">
