--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -3,10 +3,9 @@
 
 <!-- tmpl_if report_by_message_index --> 
 
-	<div class="row">
-	  <div class="small-9 small-centered columns">	
 	
-		<ul class="pagination">
+	<div class="pagination-centered">
+  		<ul class="pagination">
 			<li class="arrow">
 				<a href="#" class="tracker_turn_page" data-page="<!-- tmpl_var first_page -->">
 					&laquo;
@@ -51,7 +50,6 @@
 			</li>
 		</ul>
 	</div>
-</div>
 
 <table  style="width:100%" class="responsive">
 <tr> 
