--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -46,9 +46,9 @@
 	
 	<div class="row">
 		<div class="small-12 columns ">	
-			Viewing 
+			Records shown at one time: 
 			<!-- tmpl_var tracker_record_view_count_widget --> 
-			Records at once. 
+			 
 		</div> 
 	</div>
 	<div id="show_table_results"></div>
